--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -6,6 +6,8 @@
     "type": "module",
     "dependencies": {
         "cheerio": "^1.0.0-rc.12",
-        "@storyblok/richtext": "^3.8.0"
+        "@storyblok/richtext": "^3.8.0",
+        "fs-extra": "^11.2.0",
+        "slugify": "^1.6.6"
     }
 }
