--- a/packages/export/package.json
+++ b/packages/export/package.json
@@ -6,10 +6,10 @@
     "type": "module",
     "scripts": {
         "start": "node src/index.js",
-        "dev": "nodemon src/index.js"
     },
     "dependencies": {
         "@migration/shared": "workspace:*",
-        "fs-extra": "^11.2.0"
+        "fs-extra": "^11.2.0",
+        "dotenv": "^16.3.1"
     }
 }
