--- a/packages/import/package.json
+++ b/packages/import/package.json
@@ -5,8 +5,7 @@
     "main": "src/index.js",
     "type": "module",
     "scripts": {
-        "start": "node src/index.js",
-        "dev": "nodemon src/index.js"
+        "start": "node src/index.js"
     },
     "dependencies": {
         "@migration/shared": "workspace:*",
