--- a/packages/export/package.json
+++ b/packages/export/package.json
@@ -6,10 +6,12 @@
     "type": "module",
     "scripts": {
         "start": "node src/index.js",
+        "export": "node src/index.js"
     },
     "dependencies": {
         "@migration/shared": "workspace:*",
-        "fs-extra": "^11.2.0",
-        "dotenv": "^16.3.1"
+        "commander": "^14.0.1",
+        "dotenv": "^16.3.1",
+        "fs-extra": "^11.2.0"
     }
 }
